src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-neutral-900 xl:bg-neutral-800 text-white;
  }

  *::-webkit-scrollbar {
    @apply w-2;
  }

  *::-webkit-scrollbar-track {
    @apply bg-transparent;
  }

  *::-webkit-scrollbar-thumb {
    @apply bg-neutral-600 rounded-2xl;
  }
}

@layer utilities {
  .border,
  .border-b,
  .border-t,
  .border-r,
  .border-l {
    @apply border-neutral-700;
  }
}

